# darknet-cpp-wrapper

./: CMakeLists.txt  README.md  yolo_console_dll.cpp
cv/: with_cv.hpp
darknet/: Makefile  Makefile-static-link
darknet/src/: yolo_console_dll.cpp
wrapper/: box_image.h  detector.cpp  detector.hpp  preview.hpp  track_flow_gpu.hpp  track_flow_nogpu.hpp
